# monitor-cli

./: README.md  build.sh  docker-compose.yaml  pyproject.toml  requirements.txt
monitorcli/: cli.py  configure.py  docker.py  test.py
monitorcli/scripts/: start-monitor.sh  stop-monitor.sh
service/: Dockerfile  monitor_container.py
